--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
+        "@tailwindcss/vite": "^4.0.17",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "init": "^0.1.2",
         "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0",
+        "npx": "^10.2.2",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.0.17",
         "vite": "^6.0.11"
     }
 }
